# JustMediaEditor

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/just/android/justmediaeditor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: glTransitionFShader_chongdie.glsl  glTransitionFShader_huanying.glsl  glTransitionFShader_shuidi.glsl  glTransitionFShader_shuizi.glsl  glTransitionFShader_shunshizhen.glsl  glTransitionFShader_xiantiao.glsl  glTransitionVShader.glsl
app/src/main/java/just/android/justmediaeditor/: JustMediaEditorApplication.kt  JustMediaEditorDemoActivity.kt  JustMediaEditorProgressActivity.kt
app/src/main/res/layout/: activity_editor_progress.xml  activity_main.xml  activity_media_editor_demo.xml  adapter_item_font_text.xml  adapter_item_sticker.xml  layout_add_font_text_widget.xml  layout_add_sticker_widget.xml
app/src/main/res/values/: array.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/just/android/justmediaeditor/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
mediaeditor/: build.gradle
mediaeditor/src/main/: AndroidManifest.xml
mediaeditor/src/main/cpp/: CMakeLists.txt  JustMediaEditorNative.cpp
mediaeditor/src/main/cpp/decoder/: BaseDecoder.cpp  BaseDecoder.h
mediaeditor/src/main/cpp/decoder/audio/: AudioDecoder.cpp  AudioDecoder.h
mediaeditor/src/main/cpp/decoder/video/: ManualVideoDecoder.cpp  ManualVideoDecoder.h  VideoBaseDecoder.cpp  VideoBaseDecoder.h  VideoDecoder.cpp  VideoDecoder.h
mediaeditor/src/main/cpp/editor/: JustMediaEditor.cpp  JustMediaEditor.h  JustPic2VideoEditor.cpp  JustPic2VideoEditor.h
mediaeditor/src/main/cpp/encoder/: BaseEncoder.cpp  BaseEncoder.h
mediaeditor/src/main/cpp/encoder/audio/: AudioEncoder.cpp  AudioEncoder.h
mediaeditor/src/main/cpp/encoder/video/: VideoEncoder.cpp  VideoEncoder.h
mediaeditor/src/main/cpp/include/arm64-v8a/: config.h
mediaeditor/src/main/cpp/include/libavutil/: ffversion.h
mediaeditor/src/main/cpp/muxer/: BaseMuxer.cpp  BaseMuxer.h
mediaeditor/src/main/cpp/param/: TextDisplayParam.h
mediaeditor/src/main/cpp/render/: BaseRender.h
mediaeditor/src/main/cpp/render/audio/filter/: AudioDoubleInputFilter.cpp  AudioDoubleInputFilter.h  AudioSingleInputFilter.cpp  AudioSingleInputFilter.h  BaseAudioFilter.cpp  BaseAudioFilter.h
mediaeditor/src/main/cpp/render/video/: BaseVideoRender.cpp  BaseVideoRender.h  EGLVideoRender.cpp  EGLVideoRender.h
mediaeditor/src/main/cpp/render/video/sample/: BaseSample.cpp  BaseSample.h
mediaeditor/src/main/cpp/render/video/sample/font/: FontRenderSample.cpp  FontRenderSample.h
mediaeditor/src/main/cpp/render/video/sample/frame/: DefaultFrameRenderSample.cpp  DefaultFrameRenderSample.h  FrameRenderSample.cpp  FrameRenderSample.h  LutSample.cpp  LutSample.h  PartGraySample.cpp  PartGraySample.h  TransitionRenderSample.cpp  TransitionRenderSample.h
mediaeditor/src/main/cpp/render/video/sample/mark/: MarkRenderSample.cpp  MarkRenderSample.h
mediaeditor/src/main/cpp/render/video/sample/sticker/: StickerRenderSample.cpp  StickerRenderSample.h
mediaeditor/src/main/cpp/util/: DataFilterUtil.cpp  DataFilterUtil.h  GLUtil.cpp  GLUtil.h  ImageDef.h  LogUtil.h
(+28 files in other folders)
